--- a/index.html
+++ b/index.html
@@ -120,5 +120,15 @@
             </time>
             مهمانی داریم.
         </p>
+
+
+
+        <!-- عکس‌ها در HTML -->
+        <img
+            src="https://cdn.quera.ir/images/logo/logo-q.0-3aee17faf53e.svg"
+            alt="تصویر لوگو کوئرا"
+            width="300"
+            height="300"
+        />
     </body>
 </html>
