--- a/invitation-link/index.html
+++ b/invitation-link/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <a href="./accept.html">
+        <a href="./accept.html" target="_blank">
             ثبت نام
         </a>
     </body>
