add table course

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fa-IR">
     <head>
         <title>کد خفن من</title>
+        <meta charset="UTF-8">
     </head>
     <body dir="rtl">
         سلام
@@ -130,5 +131,69 @@
             width="300"
             height="300"
         />
+
+        <table>
+            <caption>جدول اطلاعات افراد</caption>
+            <tr>
+                <th>نام</th>
+                <th>نام خانوادگی</th>
+                <th>سن</th>
+            </tr>
+            <tr>
+                <td>علی</td>
+                <td>علوی</td>
+                <td>۲۲</td>
+            </tr>
+            <tr>
+                <td>محمد</td>
+                <td>محمدی</td>
+                <td>۳۰</td>
+            </tr>
+            <tr>
+                <td>فاطمه</td>
+                <td>رضایی</td>
+                <td>۲۰</td>
+            </tr>
+            <tr>
+                <td colspan="2">میانگین سنین</td>
+                <td>۲۴</td>
+            </tr>
+        </table>
+
+
+
+        <table border="1">
+            <caption>جدول اطلاعات افراد</caption>
+            <thead>
+                <tr>
+                    <th>نام</th>
+                    <th>نام خانوادگی</th>
+                    <th>سن</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>علی</td>
+                    <td>علوی</td>
+                    <td>۲۲</td>
+                </tr>
+                <tr>
+                    <td>محمد</td>
+                    <td>محمدی</td>
+                    <td>۳۰</td>
+                </tr>
+                <tr>
+                    <td>فاطمه</td>
+                    <td>رضایی</td>
+                    <td>۲۰</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">میانگین سنین</td>
+                    <td>۲۴</td>
+                </tr>
+            </tfoot>
+        </table>
     </body>
 </html>
