finish html course

--- a/index.html
+++ b/index.html
@@ -195,5 +195,13 @@
                 </tr>
             </tfoot>
         </table>
+
+
+        <iframe
+                width="425"
+                height="350"
+                src="https://www.openstreetmap.org/export/embed.html?bbox=51.33488416671753%2C35.69695936223442%2C51.34217977523804%2C35.70145516581857&amp;layer=mapnik"
+        >
+        </iframe>
     </body>
 </html>
