init nested selector paractice completed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>کد خفن من</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body dir="rtl">
         سلام
@@ -203,5 +204,23 @@
                 src="https://www.openstreetmap.org/export/embed.html?bbox=51.33488416671753%2C35.69695936223442%2C51.34217977523804%2C35.70145516581857&amp;layer=mapnik"
         >
         </iframe>
+
+
+        <div>
+            <span class="background-opacity-100">opacity: 1</span>
+            <span class="background-opacity-60">opacity: 2</span>
+            <span class="background-opacity-30">opacity: 3</span>
+            <span class="background-opacity-10">opacity: 4</span>
+        </div>
+
+        <div class="background-img"/>
+
+    <!-- CSS BORDER -->
+    <div>
+        <div class="border-style-1 border-dotted"> در اطراف این المان بوردر قرار گرفته است</div>
+        <div class="border-style-2"> در پایین این المان یک بوردر قرمز رنگ قرار گرفته است</div>
+        <div class="border-style-3"> اینجا یک بوردر با گوشه‌های منحنی قرار گرفته است</div>
+        <div class="border-style-4"> بوردر سمت چپ این المان آبی شده است</div>
+    </div>
     </body>
 </html>
