--- a/index.html
+++ b/index.html
@@ -222,5 +222,15 @@
         <div class="border-style-3"> اینجا یک بوردر با گوشه‌های منحنی قرار گرفته است</div>
         <div class="border-style-4"> بوردر سمت چپ این المان آبی شده است</div>
     </div>
+
+    <h1 id="padding">
+        تست پدینگ
+    </h1>
+
+        <h1>مدل جعبه‌ای</h1>
+        <p>
+            یک متن کوتاه
+        </p>
+        <h2>یک تیتر دیگر</h2>
     </body>
 </html>
