--- a/focus-btn/index.html
+++ b/focus-btn/index.html
@@ -2,8 +2,34 @@
 <html>
   <head>
     <title>Focus Button</title>
-    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8"/>
+    <style>
+      @font-face {
+        font-family: Vazir;
+        src: url("./assets/Vazir.ttf");
+      }
+      * {
+        font-family: Vazir;
+      }
+      .focus-btn {
+        border: 1px solid #6868f0;
+        background-color: #6868f0;
+        color: #fff;
+        height: 40px;
+        margin: 10px;
+      }
+
+      .focus-btn:hover {
+        cursor: pointer;
+      }
+
+      .focus-btn:focus {
+        outline-width: 0;
+        border-color: #007aa3;
+        background-color: #007aa3;
+        box-shadow: 0 0 0 3px rgba(0, 122, 163, 0.5);
+      }
+    </style>
   </head>
   <body dir="rtl">
     <button class="focus-btn">نمایش اطلاعات</button>
